--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
       <div class='col-xl-7 col-md-12'>
         <div class='banner-top__content'>
           <h2 class='title'>
-            XPatAI: Your AI content partner for efficient and effective
+            Your AI content partner for efficient and effective
             communication.
           </h2>
           <p class='desc'>
