--- a/views/index.hbs
+++ b/views/index.hbs
@@ -45,7 +45,7 @@
         <div class='about__content'>
           <div class='block-text'>
             <h3 class='title'>Features</h3>
-            <p>The key features of Xpatai AI assistant are:</p>
+            <p>The key features of XPatAI assistant are:</p>
           </div>
 
           <div class='list-icon-box' data-aos='fade-up' data-aos-duration='800'>
@@ -244,7 +244,7 @@
                 <div class='list-progress'>
                   <div class='progress'>
                     <div class='title'>
-                      <p>Liquidity: 85%</p>
+                      <p>Liquidity: 95%</p>
                     </div>
                     <div class='barline'>
                       <div class='countbar s1' data-percentNumber='85'></div>
@@ -253,15 +253,16 @@
 
                   <div class='progress'>
                     <div class='title'>
-                      <p>Project reserve: 10%</p>
+                      <p>Team reserve: 5%</p>
                     </div>
                     <div class='barline'>
                       <div class='countbar s2' data-percentNumber='10'></div>
                     </div>
                   </div>
+
                   <div class='progress'>
                     <div class='title'>
-                      <p>Marketing: 5%</p>
+                      <p>Buy-and-sell Tax: 5%</p>
                     </div>
                     <div class='barline'>
                       <div class='countbar s3' data-percentNumber='5'></div>
@@ -482,7 +483,7 @@
                 </li>
                 <li>
                   <div class='dot'></div>
-                  <p class='fs-17'>White paper conpletion</p>
+                  <p class='fs-17'>White paper completion</p>
                 </li>
                 <li>
                   <div class='dot'></div>
@@ -537,7 +538,7 @@
             data-aos='fade-right'
             data-aos-duration='1000'
           >
-            <h3 class='title-box'>Q4 2021</h3>
+            <h3 class='title-box'>Phase 4</h3>
             <div class='icon'><div class='dot'></div></div>
             <svg
               width='466'
@@ -554,25 +555,26 @@
             </svg>
 
             <div class='content'>
-              <h5 class='title'>Research</h5>
+              <h5 class='title'>App Development</h5>
               <ul class='list'>
                 <li>
                   <div class='dot'></div>
-                  <p class='fs-17'>Concept Generation</p>
+                  <p class='fs-17'>XPat Android App</p>
                 </li>
                 <li>
                   <div class='dot'></div>
-                  <p class='fs-17'>White paper conpletion</p>
+                  <p class='fs-17'>XPat IOS App</p>
                 </li>
               </ul>
             </div>
           </div>
+
           <div
             class='box-roadmap right'
             data-aos='fade-left'
             data-aos-duration='1000'
           >
-            <h3 class='title-box'>2022</h3>
+            <h3 class='title-box'>Phase 5</h3>
             <div class='icon'><div class='dot'></div></div>
             <svg
               width='468'
@@ -588,15 +590,15 @@
               ></path>
             </svg>
             <div class='content'>
-              <h5 class='title'>Design</h5>
+              <h5 class='title'>Marketing</h5>
               <ul class='list'>
                 <li>
                   <div class='dot'></div>
-                  <p class='fs-17'>Public fiancing & Seed funding raised</p>
+                  <p class='fs-17'>Influencer Marketing</p>
                 </li>
                 <li>
                   <div class='dot'></div>
-                  <p class='fs-17'>ICO Press Tour</p>
+                  <p class='fs-17'>Global adoption of XPat App</p>
                 </li>
                 <li>
                   <div class='dot'></div>
@@ -613,7 +615,7 @@
 <!-- End Section Road Map -->
 
 <!-- Section Team -->
-<section class='section-team style-1' id='team'>
+{{!-- <section class='section-team style-1' id='team'>
   <div class='container'>
     <div class='row'>
       <div class='col-md-12'>
@@ -729,7 +731,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> --}}
 <!-- End Section Team -->
 
 <!-- Section Question -->
