--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -91,35 +91,17 @@
           <div class='row'>
             <div class='col-md-12'>
               <div class='content'>
-                <h3 class=''>Don't miss out, Stay updated</h3>
-                <form action='#' id='subscribe-form'>
-                  <input
-                    type='email'
-                    placeholder='Enter your email'
-                    required=''
-                    id='subscribe-email'
-                  />
-                  <button
-                    class='btn-action s2'
-                    type='submit'
-                    id='subscribe-button'
-                  >
-                    <span class='effect'>SUBSCRIBE</span>
-                  </button>
-                </form>
+                <h3 class=''>XPat Contract Address: <small>coming soon</small></h3>
+                
                 <p>
-                  Don’t hesitate to subscribe to latest news and updates from
-                  XPatAi.
+                  Join the XPat Community Now.
                 </p>
                 <ul class='list-social'>
                   <li>
-                    <a href='#'><span class='icon-twitter'></span></a>
+                    <a href='https://twitter.com/xpatai'><span class='icon-twitter'></span></a>
                   </li>
                   <li>
-                    <a href='#'><span class='icon-facebook'></span></a>
-                  </li>
-                  <li>
-                    <a href='#'><span class='icon-youtobe'></span></a>
+                    <a href='https://t.me/xpatai'><span class='icon-telegram'></span></a>
                   </li>
                 </ul>
               </div>
