--- a/views/index.hbs
+++ b/views/index.hbs
@@ -225,7 +225,7 @@
 <!-- End Section Choose -->
 
 <!-- Section Allocation & Funds Distribution -->
-<section class='allo-dist' id='sales 4 tokenomics'>
+<section class='allo-dist' id='tokenomics'>
   <div class='container'>
     <div class='row'>
       <div class='col-md-12'>
