--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -66,10 +66,10 @@
                       <a href='#tokenomics'>Tokenomics</a>
                     </li>
                     <li class='menu-item'>
-                      <a href='/#4'>Roadmap</a>
+                      <a href='/#roadmap'>Roadmap</a>
                     </li>
                     <li class='menu-item'>
-                      <a href='/#4'>Team</a>
+                      <a href='/#faq'>FAQs</a>
                     </li>
                   </ul>
                 </nav>
