--- a/views/index.hbs
+++ b/views/index.hbs
@@ -770,9 +770,8 @@
                 <div class='flat-toggle active'>
                   <h5 class='toggle-title active'>How do i get started?</h5>
                   <p class='toggle-content'>
-                    Once ICO period is launched, You can purchased Token with
-                    Etherum, Bitcoin or Litecoin. You can also tempor incididunt
-                    ut labore et dolore magna aliqua sed do eiusmod eaque ipsa.
+                    Download the XPatAI app from your app store to get started.
+                    You can also interact with our <a target="_blank" rel="nofollow" href="https://t.me/xpataibot">Telegram Bot</a>
                   </p>
                 </div>
               </div>
