--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,8 +5,7 @@
       <div class='col-xl-7 col-md-12'>
         <div class='banner-top__content'>
           <h2 class='title'>
-            Your AI content partner for efficient and effective
-            communication.
+            Your AI content partner for efficient and effective communication.
           </h2>
           <p class='desc'>
             Revolutionize your content creation with XPatAI - the smart AI
@@ -24,7 +23,7 @@
       </div>
       <div class='col-xl-5 col-md-12'>
         <div class='banner-top__image'>
-          <img src='/images/layout/banner-5.png' alt='ICOLand' />
+          <img src='/images/layout/banner-5.png' alt='XPatAi' />
         </div>
       </div>
     </div>
@@ -38,7 +37,7 @@
     <div class='row'>
       <div class='col-xl-7 col-md-12'>
         <div class='about__image'>
-          <img src='/images/layout/Graphic.png' alt='ICOLand' />
+          <img src='/images/layout/Graphic.png' alt='XPatAi' />
         </div>
       </div>
       <div class='col-xl-5 col-md-12'>
@@ -229,11 +228,18 @@
   <div class='container'>
     <div class='row'>
       <div class='col-md-12'>
-        <div class='block-text center'>
+        <div class='block-text token-allo center'>
           <h3>Token Distribution</h3>
           <p class='mt-12'>
-            Join the industry leaders to discuss where the markets are heading.
-            We accept token payments.
+            XPatAI is a cutting-edge platform that leverages AI technology to
+            offer advanced services to its users. With our platform, you can
+            generate articles, get real-time answers to questions, integrate
+            with social media, and manage your schedule. And now, with the
+            introduction of our two tokens -
+            <em style='font-weight:900'>XPAT</em>
+            and
+            <em style='font-weight: 900;'>INK</em>
+            - you have even more ways to use and benefit from our platform.
           </p>
         </div>
 
@@ -247,7 +253,7 @@
                       <p>Liquidity: 95%</p>
                     </div>
                     <div class='barline'>
-                      <div class='countbar s1' data-percentNumber='85'></div>
+                      <div class='countbar s1' data-percentNumber='95'></div>
                     </div>
                   </div>
 
@@ -256,7 +262,7 @@
                       <p>Team reserve: 5%</p>
                     </div>
                     <div class='barline'>
-                      <div class='countbar s2' data-percentNumber='10'></div>
+                      <div class='countbar s2' data-percentNumber='5'></div>
                     </div>
                   </div>
 
@@ -267,127 +273,69 @@
                   </div>
                 </div>
 
-                <!-- <div class="chart-bar">
-                      <canvas id="myChart1"></canvas>
-                    </div> -->
+                <div class='chart-bar'>
+                  <canvas id='myChart1'></canvas>
+                </div>
 
-                <!-- <div class="list-progress right">
-                      <div class="progress">
-                        <div class="title">
-                          <p>Reserve: 10%</p>
-                        </div>
-                        <div class="barline">
-                          <div
-                            class="countbar s4"
-                            data-percentNumber="10"
-                          ></div>
-                        </div>
-                      </div>
-
-                      <div class="progress">
-                        <div class="title">
-                          <p>Reserve: 10%</p>
-                        </div>
-                        <div class="barline">
-                          <div
-                            class="countbar s5"
-                            data-percentNumber="10"
-                          ></div>
-                        </div>
-                      </div>
-                      <div class="progress">
-                        <div class="title">
-                          <p>Token Sale: 20%</p>
-                        </div>
-                        <div class="barline">
-                          <div
-                            class="countbar s6"
-                            data-percentNumber="20"
-                          ></div>
-                        </div>
-                      </div>
-                    </div> -->
+                <div class='list-progress right'>
+                  <h4>INK</h4>
+                  <ul>
+                    <li><span>Token Name: </span>INK</li>
+                    <li><span>Symbol: </span> INK</li>
+                    <li><span>Total Supply: </span> 10,000,000</li>
+                    <li><span>Decimal: </span>18</li>
+                    <li><span>Contract Address: </span>Coming Soon</li>
+                  </ul>
+                  <h4 class='mt-12'>XPAT</h4>
+                  <ul>
+                    <li><span>Token Name: </span>XPatAI</li>
+                    <li><span>Symbol: </span> XPAT</li>
+                    <li><span>Total Supply: </span> 10,000,000</li>
+                    <li><span>Decimal: </span>18</li>
+                    <li><span>Contract Address: </span>Coming Soon</li>
+                  </ul>
+                </div>
               </div>
-              <!-- <div class="content-inner">
-                    <div class="list-progress">
-                      <div class="progress">
-                        <div class="title">
-                          <p>Marketing: 25%</p>
-                        </div>
-                        <div class="barline">
-                          <div
-                            class="countbar s1"
-                            data-percentNumber="25"
-                          ></div>
-                        </div>
-                      </div>
-
-                      <div class="progress">
-                        <div class="title">
-                          <p>Bussiness Development: 25%</p>
-                        </div>
-                        <div class="barline">
-                          <div
-                            class="countbar s2"
-                            data-percentNumber="25"
-                          ></div>
-                        </div>
-                      </div>
-                      <div class="progress">
-                        <div class="title">
-                          <p>Product Development: 10%</p>
-                        </div>
-                        <div class="barline">
-                          <div
-                            class="countbar s3"
-                            data-percentNumber="10"
-                          ></div>
-                        </div>
-                      </div>
+              <div class='content-inner'>
+                <div class='list-progress'>
+                  <div class='progress'>
+                    <div class='title'>
+                      <p>Liquidity: 95%</p>
                     </div>
-
-                    <div class="chart-bar">
-                      <canvas id="myChart2"></canvas>
+                    <div class='barline'>
+                      <div class='countbar s1' data-percentNumber='95'></div>
                     </div>
+                  </div>
 
-                    <div class="list-progress right">
-                      <div class="progress">
-                        <div class="title">
-                          <p>Reserve: 10%</p>
-                        </div>
-                        <div class="barline">
-                          <div
-                            class="countbar s4"
-                            data-percentNumber="10"
-                          ></div>
-                        </div>
-                      </div>
-
-                      <div class="progress">
-                        <div class="title">
-                          <p>Reserve: 10%</p>
-                        </div>
-                        <div class="barline">
-                          <div
-                            class="countbar s5"
-                            data-percentNumber="10"
-                          ></div>
-                        </div>
-                      </div>
-                      <div class="progress">
-                        <div class="title">
-                          <p>Token Sale: 20%</p>
-                        </div>
-                        <div class="barline">
-                          <div
-                            class="countbar s6"
-                            data-percentNumber="20"
-                          ></div>
-                        </div>
-                      </div>
+                  <div class='progress'>
+                    <div class='title'>
+                      <p>Team: 5%</p>
                     </div>
-                  </div> -->
+                    <div class='barline'>
+                      <div class='countbar s2' data-percentNumber='5'></div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class='chart-bar'>
+                  <canvas id='myChart2'></canvas>
+                </div>
+
+              </div>
             </div>
+          </div>
+          <div class='allo-note' style='margin-top: 56px'>
+            <p>We have two tokens on the XPatAI platform:
+              <em style='font-weight: 900;'>XPAT</em>
+              and
+              <em style='font-weight: 900;'>INK</em>. XPAT serves as the
+              governance token, giving users a say in how the platform is run,
+              while INK is the utility token, used to access and pay for the
+              various services offered on the platform All pricing on the
+              <em>XPatAI</em> platform is in INK, with the amount charged for a request
+              determined by its weight.. You can easily convert between XPAT and
+              INK on the XPatAI mobile app, with the exchange rate determined by
+              prevailing market conditions.</p>
           </div>
         </div>
       </div>
@@ -612,7 +560,7 @@
 <!-- End Section Road Map -->
 
 <!-- Section Team -->
-{{!-- <section class='section-team style-1' id='team'>
+{{! <section class='section-team style-1' id='team'>
   <div class='container'>
     <div class='row'>
       <div class='col-md-12'>
@@ -631,7 +579,7 @@
           <div class='team-box__image'>
             <a href='#'><img
                 src='/images/avt/team-main-01.png'
-                alt='ICOLand'
+                alt='XPatAi'
               /></a>
           </div>
           <div class='team-box__info'>
@@ -656,7 +604,7 @@
           <div class='team-box__image'>
             <a href='#'><img
                 src='/images/avt/team-main-02.png'
-                alt='ICOLand'
+                alt='XPatAi'
               /></a>
           </div>
           <div class='team-box__info'>
@@ -681,7 +629,7 @@
           <div class='team-box__image'>
             <a href='#'><img
                 src='/images/avt/team-main-03.png'
-                alt='ICOLand'
+                alt='XPatAi'
               /></a>
           </div>
           <div class='team-box__info'>
@@ -706,7 +654,7 @@
           <div class='team-box__image'>
             <a href='#'><img
                 src='/images/avt/team-main-04.png'
-                alt='ICOLand'
+                alt='XPatAi'
               /></a>
           </div>
           <div class='team-box__info'>
@@ -728,7 +676,7 @@
       </div>
     </div>
   </div>
-</section> --}}
+</section> }}
 <!-- End Section Team -->
 
 <!-- Section Question -->
@@ -771,7 +719,12 @@
                   <h5 class='toggle-title active'>How do i get started?</h5>
                   <p class='toggle-content'>
                     Download the XPatAI app from your app store to get started.
-                    You can also interact with our <a target="_blank" rel="nofollow" href="https://t.me/xpataibot">Telegram Bot</a>
+                    You can also interact with our
+                    <a
+                      target='_blank'
+                      rel='nofollow'
+                      href='https://t.me/xpataibot'
+                    >Telegram Bot</a>
                   </p>
                 </div>
               </div>
