--- a/views/index.hbs
+++ b/views/index.hbs
@@ -234,12 +234,7 @@
             XPatAI is a cutting-edge platform that leverages AI technology to
             offer advanced services to its users. With our platform, you can
             generate articles, get real-time answers to questions, integrate
-            with social media, and manage your schedule. And now, with the
-            introduction of our two tokens -
-            <em style='font-weight:900'>XPAT</em>
-            and
-            <em style='font-weight: 900;'>INK</em>
-            - you have even more ways to use and benefit from our platform.
+            with social media, and manage your schedule.
           </p>
         </div>
 
@@ -278,20 +273,11 @@
                 </div>
 
                 <div class='list-progress right'>
-                  <h4>INK</h4>
-                  <ul>
-                    <li><span>Token Name: </span>INK</li>
-                    <li><span>Symbol: </span> INK</li>
-                    <li><span>Total Supply: </span> 10,000,000</li>
-                    <li><span>Decimal: </span>18</li>
-                    <li><span>Contract Address: </span>Coming Soon</li>
-                  </ul>
-                  <h4 class='mt-12'>XPAT</h4>
                   <ul>
                     <li><span>Token Name: </span>XPatAI</li>
                     <li><span>Symbol: </span> XPAT</li>
-                    <li><span>Total Supply: </span> 10,000,000</li>
-                    <li><span>Decimal: </span>18</li>
+                    <li><span>Total Supply: </span> 24,000,000</li>
+                    <li><span>Decimal: </span>8</li>
                     <li><span>Contract Address: </span>Coming Soon</li>
                   </ul>
                 </div>
@@ -323,19 +309,6 @@
 
               </div>
             </div>
-          </div>
-          <div class='allo-note' style='margin-top: 56px'>
-            <p>We have two tokens on the XPatAI platform:
-              <em style='font-weight: 900;'>XPAT</em>
-              and
-              <em style='font-weight: 900;'>INK</em>. XPAT serves as the
-              governance token, giving users a say in how the platform is run,
-              while INK is the utility token, used to access and pay for the
-              various services offered on the platform All pricing on the
-              <em>XPatAI</em> platform is in INK, with the amount charged for a request
-              determined by its weight.. You can easily convert between XPAT and
-              INK on the XPatAI mobile app, with the exchange rate determined by
-              prevailing market conditions.</p>
           </div>
         </div>
       </div>
