--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 <section class='banner-top style-2' id='hero'>
   <div class='container'>
     <div class='row'>
-      <div class='col-xl-7 col-md-12'>
+      <div class='col-xl-8 col-md-12'>
         <div class='banner-top__content'>
           <h2 class='title'>
             Your AI content partner for efficient and effective communication.
@@ -21,10 +21,22 @@
           </div>
         </div>
       </div>
-      <div class='col-xl-5 col-md-12'>
+      <div class='col-xl-4 col-md-12'>
         <div class='banner-top__image'>
-          <img src='/images/layout/banner-5.png' alt='XPatAi' />
+          <div class='slider'>
+            <div><img src='/images/layout/main.jpg' alt='Slide 1' /></div>
+            <div><img src='/images/layout/qa.jpg' alt='Slide 2' /></div>
+            <div><img
+                src='/images/layout/filled-article.jpg'
+                alt='Slide 3'
+              /></div>
+            <div><img
+                src='/images/layout/article-page.jpg'
+                alt='Slide 4'
+              /></div>
+          </div>
         </div>
+
       </div>
     </div>
   </div>
@@ -101,6 +113,7 @@
                 <p class='fs-14'>
                   Xpatai can generate recipes based on ingredients, cuisine, or
                   dietary restrictions.
+
                 </p>
               </div>
             </div>
@@ -245,19 +258,19 @@
                 <div class='list-progress'>
                   <div class='progress'>
                     <div class='title'>
-                      <p>Liquidity: 95%</p>
+                      <p>Liquidity: 90%</p>
                     </div>
                     <div class='barline'>
-                      <div class='countbar s1' data-percentNumber='95'></div>
+                      <div class='countbar s1' data-percentNumber='90'></div>
                     </div>
                   </div>
 
                   <div class='progress'>
                     <div class='title'>
-                      <p>Team reserve: 5%</p>
+                      <p>Team reserve: 10%</p>
                     </div>
                     <div class='barline'>
-                      <div class='countbar s2' data-percentNumber='5'></div>
+                      <div class='countbar s2' data-percentNumber='10'></div>
                     </div>
                   </div>
 
@@ -275,9 +288,10 @@
                 <div class='list-progress right'>
                   <ul>
                     <li><span>Token Name: </span>XPatAI</li>
-                    <li><span>Symbol: </span> XPAT</li>
+                    <li><span>Symbol: </span> XINK</li>
                     <li><span>Total Supply: </span> 24,000,000</li>
                     <li><span>Decimal: </span>8</li>
+                    <li><span>Network: </span>Etherium</li>
                     <li><span>Contract Address: </span>Coming Soon</li>
                   </ul>
                 </div>
@@ -477,11 +491,11 @@
               <ul class='list'>
                 <li>
                   <div class='dot'></div>
-                  <p class='fs-17'>XPat Android App</p>
+                  <p class='fs-17'>XINK Android App</p>
                 </li>
                 <li>
                   <div class='dot'></div>
-                  <p class='fs-17'>XPat IOS App</p>
+                  <p class='fs-17'>XINK IOS App</p>
                 </li>
               </ul>
             </div>
@@ -531,6 +545,60 @@
   </div>
 </section>
 <!-- End Section Road Map -->
+
+<!-- Section Private Sale  -->
+<section class='token-details style-2' id='private-sale'>
+  <div class='container'>
+    <div class='row'>
+      <div class='col-md-12'>
+        <div class='block-text center'>
+          <h3 class='heading'>Private Sale</h3>
+          <p class='text'>
+            Become an early investor in our revolutionary AI-powered content
+            creation platform. Join the private sale now!!!
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class='row'>
+      <div class='col-xl-6 col-md-12'>
+        <div class='banner-top__sale'>
+          <div class='sale-content'>
+            <h5>Token Sale Stage End In</h5>
+            <span class='js-countdown' data-timer='16493400'></span>
+
+            <div class='token-bar'>
+              <div class='button'>
+                <a href='#' class='btn-action'><span>Buy Tokens Now</span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class='col-xl-6 col-md-12'>
+        <div class='sale-info'>
+          <h5 class='heading'>Sale Information</h5>
+          <div class='info-box'>
+            <h5 class='title'>Private sale starts</h5>
+            <p class='fs-17'>23 FEB 2023 11:00 UTC</p>
+          </div>
+          <div class='info-box'>
+            <h5 class='title'>Private Sale Ends</h5>
+            <p class='fs-17'>3 FEB 2023 11:00 UTC</p>
+          </div>
+          <div class='info-box'>
+            <h5 class='title'>Total Token For Sale</h5>
+            <p class='fs-17'>1,550,000 </p>
+          </div>
+          <div class='info-box'>
+            <h5 class='title'>Token Exchange rate</h5>
+            <p class='fs-17'>1 ETH = 576,000 XINK</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- Section Team -->
 {{! <section class='section-team style-1' id='team'>
