--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,6 +3,9 @@
     <meta charset='UTF-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css'>
+    <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css'>
+
     <title>XPatAi | XPatAi Homepage</title>
 
     <!-- Styles -->
@@ -135,6 +138,17 @@
     <script>
       AOS.init();
     </script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js'></script>
+    <script>
+      $(document).ready(function(){
+        $('.slider').slick({
+          autoplay: true,
+          autoplaySpeed: 3000,
+          dots: true,
+          arrows: false
+        });
+      });
+    </script>
 
     <script>
       let numberPercent = document.querySelectorAll('.countbar'); let getPercent
@@ -154,7 +168,7 @@
             ],
             datasets: [{
                 label: 'My First Dataset',
-                data: [95, 5],
+                data: [90, 10],
                 backgroundColor: [
                 '#2724ca',
                 '#23e4a1',
