private sale page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,7 +12,7 @@
             solution for all your writing, scheduling, and social media needs!
           </p>
           <div class='button'>
-            <a class='btn-action style-5' href='#'>
+            <a class='btn-action style-5' href='/private-sale'>
               <span>Buy Tokens now</span>
             </a>
             <a class='btn-action-outline style-3' href='#'>
@@ -569,7 +569,7 @@
 
             <div class='token-bar'>
               <div class='button'>
-                <a href='#' class='btn-action'><span>Buy Tokens Now</span></a>
+                <a href='/private-sale' class='btn-action'><span>Buy Tokens Now</span></a>
               </div>
             </div>
           </div>
