--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -135,6 +135,7 @@
     <script src='/js/count-down.js'></script>
     <script src='/js/aos.js'></script>
     <script src='/js/chart.js'></script>
+    <script src='/js/private-sale.js'></script>
     <script>
       AOS.init();
     </script>
