--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -63,10 +63,10 @@
                 <nav id='main-nav' class='main-nav'>
                   <ul id='menu-primary-menu' class='menu'>
                     <li class='menu-item current-menu-item'>
-                      <a href='#hero'>Home Page</a>
+                      <a href='/#hero'>Home Page</a>
                     </li>
                     <li class='menu-item'>
-                      <a href='#tokenomics'>Tokenomics</a>
+                      <a href='/#tokenomics'>Tokenomics</a>
                     </li>
                     <li class='menu-item'>
                       <a href='/#roadmap'>Roadmap</a>
