--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,16 +24,10 @@
       <div class='col-xl-4 col-md-12'>
         <div class='banner-top__image'>
           <div class='slider'>
-            <div><img src='/images/layout/main.jpg' alt='Slide 1' /></div>
-            <div><img src='/images/layout/qa.jpg' alt='Slide 2' /></div>
-            <div><img
-                src='/images/layout/filled-article.jpg'
-                alt='Slide 3'
-              /></div>
-            <div><img
-                src='/images/layout/article-page.jpg'
-                alt='Slide 4'
-              /></div>
+            <div><img src='/images/layout/xp2.png' alt='Slide 2' /></div>
+            <div><img src='/images/layout/xp3.png' alt='Slide 3' /></div>
+            <div><img src='/images/layout/xp4.png' alt='Slide 4' /></div>
+            <div><img src='/images/layout/xp5.png' alt='Slide 5' /></div>
           </div>
         </div>
 
