update smart chain

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -285,7 +285,7 @@
                     <li><span>Symbol: </span> XINK</li>
                     <li><span>Total Supply: </span> 24,000,000</li>
                     <li><span>Decimal: </span>8</li>
-                    <li><span>Network: </span>Etherium</li>
+                    <li><span>Network: </span>Binance Smart Chain</li>
                     <li><span>Contract Address: </span>Coming Soon</li>
                   </ul>
                 </div>
@@ -303,7 +303,7 @@
 
                   <div class='progress'>
                     <div class='title'>
-                      <p>Team: 5%</p>
+                      <p>Team: 5%</p>0.667
                     </div>
                     <div class='barline'>
                       <div class='countbar s2' data-percentNumber='5'></div>
