--- a/views/private-sale.hbs
+++ b/views/private-sale.hbs
@@ -5,11 +5,11 @@
         <div class='block-text token-allo center'>
           <h3>Private Sale </h3>
           <p class='desc mt-12'>
-            The minimum amount you can commit is 0.125 ETH while the maximum is
-            3 ETH.
+            The minimum amount you can commit is 0.667 BNB while the maximum is
+            3 BNB.
           </p>
           <p class='desc'>
-            Exchange rate: 1 ETH = 576,000 XINK.
+            Exchange rate: 1 BNB = 576,000 XINK.
           </p>
         </div>
         <div class='row'>
@@ -19,14 +19,14 @@
               <p class='wallet-address'>Wallet Address: {{walletAddress}}</p>
               <form class='buy-form'>
                 <div class='form-group'>
-                  <label for='eth-amount'>Enter ETH Amount</label>
+                  <label for='bnb-amount'>Enter BNB Amount</label>
                   <input
                     type='number'
                     class='form-control'
-                    id='eth-amount'
-                    name='eth-amount'
-                    min='0.125'
-                    max='3'
+                    id='bnb-amount'
+                    name='bnb-amount'
+                    min='0.667'
+                    max='16'
                     step='0.001'
                     required
                   />
