--- a/views/index.hbs
+++ b/views/index.hbs
@@ -281,7 +281,7 @@
 
                 <div class='list-progress right'>
                   <ul>
-                    <li><span>Token Name: </span>XPatAI</li>
+                    <li><span>Token Name: </span>Xpat Ink</li>
                     <li><span>Symbol: </span> XINK</li>
                     <li><span>Total Supply: </span> 24,000,000</li>
                     <li><span>Decimal: </span>8</li>
@@ -540,16 +540,15 @@
 </section>
 <!-- End Section Road Map -->
 
-<!-- Section Private Sale  -->
-<section class='token-details style-2' id='private-sale'>
+<!-- Section public Sale  -->
+<section class='token-details style-2' id='public-sale'>
   <div class='container'>
     <div class='row'>
       <div class='col-md-12'>
         <div class='block-text center'>
-          <h3 class='heading'>Private Sale</h3>
+          <h3 class='heading'>Public Sale</h3>
           <p class='text'>
-            Become an early investor in our revolutionary AI-powered content
-            creation platform. Join the private sale now!!!
+            Get ready for the ultimate content creation revolution! XPatAI is launching its exclusive presale on PinkSale - your chance to grab a slice of the future of AI-powered writing and social media management. Join us now and discover the power of XPatAI to streamline your content creation and transform your online presence. Don't miss out on the hottest ticket in town!!!
           </p>
         </div>
       </div>
@@ -558,12 +557,12 @@
       <div class='col-xl-6 col-md-12'>
         <div class='banner-top__sale'>
           <div class='sale-content'>
-            <h5>Token Sale Stage End In</h5>
+            <h5>Countdown to PinkSale</h5>
             <span class='js-countdown' data-timer='16493400'></span>
 
             <div class='token-bar'>
               <div class='button'>
-                <a href='/private-sale' class='btn-action'><span>Buy Tokens Now</span></a>
+                <a href='/#' class='btn-action'><span>Buy Tokens Now</span></a>
               </div>
             </div>
           </div>
@@ -573,20 +572,16 @@
         <div class='sale-info'>
           <h5 class='heading'>Sale Information</h5>
           <div class='info-box'>
-            <h5 class='title'>Private sale starts</h5>
+            <h5 class='title'>PinkSale starts</h5>
             <p class='fs-17'>23 FEB 2023 11:00 UTC</p>
           </div>
           <div class='info-box'>
-            <h5 class='title'>Private Sale Ends</h5>
+            <h5 class='title'>PinkSale Ends</h5>
             <p class='fs-17'>3 FEB 2023 11:00 UTC</p>
           </div>
-          <div class='info-box'>
+          <div class='info-box' style="margin: 0 auto">
             <h5 class='title'>Total Token For Sale</h5>
-            <p class='fs-17'>1,550,000 </p>
-          </div>
-          <div class='info-box'>
-            <h5 class='title'>Token Exchange rate</h5>
-            <p class='fs-17'>1 ETH = 576,000 XINK</p>
+            <p class='fs-17'>7200000 </p>
           </div>
         </div>
       </div>
