--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -104,7 +104,7 @@
                     <a target="_blank" href='https://twitter.com/xpatai'><span class='icon-twitter'></span></a>
                   </li>
                   <li>
-                    <a target="_blank" href='https://t.me/xpatai'><span class='icon-telegram'></span></a>
+                    <a target="_blank" href='https://t.me/xpatink'><span class='icon-telegram'></span></a>
                   </li>
                 </ul>
               </div>
