--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,8 +15,9 @@
             <a class='btn-action style-5' href='/private-sale'>
               <span>Buy Tokens now</span>
             </a>
-            <a class='btn-action-outline style-3' href='#'>
-              <span>Get Started</span>
+            <a class='btn-action-outline style-3' href='/dashboard'>
+            <span class='icon-rocket'></span>
+              <span class="ml-3">Start Mining</span>
             </a>
           </div>
         </div>
@@ -573,11 +574,11 @@
           <h5 class='heading'>Sale Information</h5>
           <div class='info-box'>
             <h5 class='title'>PinkSale starts</h5>
-            <p class='fs-17'>23 FEB 2023 11:00 UTC</p>
+            <p class='fs-17'>20 MARCH 2023 11:00 UTC</p>
           </div>
           <div class='info-box'>
             <h5 class='title'>PinkSale Ends</h5>
-            <p class='fs-17'>3 FEB 2023 11:00 UTC</p>
+            <p class='fs-17'>23 MARCH 2023 11:00 UTC</p>
           </div>
           <div class='info-box' style="margin: 0 auto">
             <h5 class='title'>Total Token For Sale</h5>
