--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,5 +1,7 @@
 <html lang='en'>
   <head>
+    <meta name="title" content="Welcome to XPat: Your AI content partner for efficient and effective communication" />
+    <meta name="content" content="Revolutionize your content creation with XPatAI - the smart AI solution for all your writing, scheduling, and social media needs!" />
     <meta charset='UTF-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
@@ -8,8 +10,9 @@
 
     <title>XPatAi | XPatAi Homepage</title>
 
+
     <!-- Styles -->
-    <link rel='stylesheet' href='/css/dist/app.css' />
+    <link rel='stylesheet' href='/css/dist/app.css?v=12' />
     <!-- end Styles -->
 
     <!-- Favicon and Touch Icons  -->
@@ -49,7 +52,7 @@
                   <img
                     id='site-logo'
                     src='/images/logo/logon.png'
-                    alt='ICOLand'
+                    alt='XpatAi'
                     width='165'
                     height='40'
                     data-retina='/images/logo/logon@x2.png'
@@ -73,6 +76,9 @@
                     </li>
                     <li class='menu-item'>
                       <a href='/#faq'>FAQs</a>
+                    </li>
+                    <li class='menu-item'>
+                      <a href='/dashboard'>Mining</a>
                     </li>
                   </ul>
                 </nav>
@@ -131,11 +137,11 @@
 
     <script src='/js/jquery.min.js'></script>
     <script src='/js/jquery.easing.js'></script>
-    <script src='/js/app.js'></script>
-    <script src='/js/count-down.js'></script>
+    <script src='/js/app.js?v=12'></script>
+    <script src='/js/count-down.js?v=12'></script>
     <script src='/js/aos.js'></script>
     <script src='/js/chart.js'></script>
-    <script src='/js/private-sale.js'></script>
+    <script src='/js/private-sale.js?v=12'></script>
     <script>
       AOS.init();
     </script>
